test/syntax/wrong/utf1.kk
fun main()
{
  // print(2 + "hello effectful world of 効果! ");
  print(2 + "hello effectful world!");
}
